--- a/rolling/linux-uksmd-git/PKGBUILD
+++ b/rolling/linux-uksmd-git/PKGBUILD
@@ -46,7 +46,7 @@ _1k_HZ_ticks=
 ### Do not edit below this line unless you know what you're doing
 
 pkgbase=linux-uksmd-git
-# pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers' 'linux-uksmd-git-docs')
+# pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers')
 _major=5.17
 _srcname=linux
 pkgver=5.17.9.r31936.gd0437845741c
@@ -56,9 +56,7 @@ arch=('x86_64')
 url="https://gitlab.com/post-factum/uksmd"
 license=('GPL2')
 options=('!strip')
-makedepends=('bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
-             'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz'
-             'texlive-latexextra' 'xmlto')
+makedepends=('bc' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'git')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _uksmd_path="ksm-patches"
@@ -181,7 +179,6 @@ build() {
   cd $_srcname
 
   make all
-  make htmldocs
 }
 
 _package() {
@@ -295,27 +292,7 @@ _package-headers() {
   ln -sr "$builddir" "$pkgdir/usr/src/$pkgbase"
 }
 
-_package-docs() {
-    pkgdesc="Documentation for the $pkgdesc kernel"
-    depends=('linux-uksmd-git')
-
-  cd $_srcname
-  local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
-
-  echo "Installing documentation..."
-  local src dst
-  while read -rd '' src; do
-    dst="${src#Documentation/}"
-    dst="$builddir/Documentation/${dst#output/}"
-    install -Dm644 "$src" "$dst"
-  done < <(find Documentation -name '.*' -prune -o ! -type d -print0)
-
-  echo "Adding symlink..."
-  mkdir -p "$pkgdir/usr/share/doc"
-  ln -sr "$builddir/Documentation" "$pkgdir/usr/share/doc/$pkgbase"
-}
-
-pkgname=("$pkgbase" "$pkgbase-headers" "$pkgbase-docs")
+pkgname=("$pkgbase" "$pkgbase-headers")
 for _p in "${pkgname[@]}"; do
   eval "package_$_p() {
     $(declare -f "_package${_p#$pkgbase}")
