--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers')
 _major=5.18
 _srcname=linux-stable-rc
-pkgver=5.18.r48.g10e6e3d47333
-pkgrel=0.3
+pkgver=5.18.2.r0.g25405d5eecac
+pkgrel=2
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -60,7 +60,7 @@ makedepends=('bc' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'git')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _aufs_path="aufs-patches"
-_aufs_ver="20220530"
+_aufs_ver="20220606"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _compiler_path="cpu-patches-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -295,7 +295,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '2f4c54bda61e27913a0d94c93e497209eda4c0c97ef1a2b67822b0b6743180bc5bad0c0110921a7552446495a4f781af4a3c6408822acd671dc6c048762cd0c0'
+            '084298b2286cb6e65ce802f5a2b6803610701a90342ff369d8f8ec8b315342c69a0f503a9f6559ddc9f1c056046a93591188dc25a4b8afb189af05444f04ec1f'
             '2fa1250d93049fcfcfe04d201236eb7a662703b71a73b77c8e5df72900ad40cbb0b818c9c82cbf0204f67bf496bce7310d713ff9106825816525be1ba2da68e8'
             '654552b89b93cb78f1fd7cc7687db1e6d0a86789e0c31f812e61fbc1440e8135f3e5c46ff0abfd74d53d7bd81a60406bf262745697a9034f10bb5c464342febf'
             'ed858a29e5bd24ed73c394409bc64f798ed3c158e7d152869d565b54978e37d3101641109d1dc805bfbd944eb88d839aed8dcc65cc11b5d09c90902e4376b162')
