--- a/stable-rc/linux-bfq-dev-git/PKGBUILD
+++ b/stable-rc/linux-bfq-dev-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers'
 _major=5.18
 _srcname=linux-stable-rc
-pkgver=5.18.r48.g10e6e3d47333
-pkgrel=0.5
+pkgver=5.18.2.r880.g09bf95a7c28a
+pkgrel=0
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -60,7 +60,7 @@ makedepends=('bc' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'git')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _bfq_name='bfq-lucjan'
-_bfq_ver='r2K220601v2'
+_bfq_ver='r2K220606v2'
 _bfq_patch="${_major}-${_bfq_name}-${_bfq_ver}.patch"
 _compiler_path="cpu-patches-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -300,7 +300,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '5adbe5ef68c26971f0bdcd083420466b6e2fab3724a0f21aa7c606a8fc0cd587dd0875cefe76df2fffb15e6845358be23e97fbc39cef155cb15d9166243cc1e2'
+            'fc52a3ead6fee75c323b773a07133fec0b50b0732b3036dca60a5077ac77332b7a1d7d2f2b19d791c44f69e128039ea361441ee8734d01f4a71071d57dd9ccd7'
             '2fa1250d93049fcfcfe04d201236eb7a662703b71a73b77c8e5df72900ad40cbb0b818c9c82cbf0204f67bf496bce7310d713ff9106825816525be1ba2da68e8'
             '654552b89b93cb78f1fd7cc7687db1e6d0a86789e0c31f812e61fbc1440e8135f3e5c46ff0abfd74d53d7bd81a60406bf262745697a9034f10bb5c464342febf'
             '5bde42e7ceaf461ab275e4d9c09e16529c517570dc340672b6b595ebf91c7cb1bebf6332a8a9f41b48b93c9b5b86678bae38ebb0497fa0c92146ae9a3807fe90')
