--- a/rolling/linux-uksmd-git/PKGBUILD
+++ b/rolling/linux-uksmd-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-uksmd-git
 # pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers')
 _major=5.18
 _srcname=linux
-pkgver=5.17.14.r49142.gb0f67965d0e5
+pkgver=5.18.4.r35435.gb9e4d8bc160d
 pkgrel=1
 pkgdesc='Linux UKSMD'
 arch=('x86_64')
@@ -67,7 +67,8 @@ _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-rolling-stable"
         "${_lucjanpath}/${_uksmd_path}/${_uksmd_patch}"
         "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
-        "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v2-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v2-sep/0002-HID-apple-Properly-handle-function-keys-on-Keychron-.patch"
          # the main kernel config files
         'config')
 
@@ -297,5 +298,6 @@ done
 sha512sums=('SKIP'
             '49ab997abb17d06b332a892cc6c281f9f757bf5455502dacef647343f3c78ed5a0ab590f12e3c85695b3bac31ee52d8640c493c502080184b802324a23a1dbaa'
             '2fa1250d93049fcfcfe04d201236eb7a662703b71a73b77c8e5df72900ad40cbb0b818c9c82cbf0204f67bf496bce7310d713ff9106825816525be1ba2da68e8'
-            '654552b89b93cb78f1fd7cc7687db1e6d0a86789e0c31f812e61fbc1440e8135f3e5c46ff0abfd74d53d7bd81a60406bf262745697a9034f10bb5c464342febf'
+            'edfeb7045168791e49737295e30cdec1a819d214e56b7ef7861efac941f309ef2c5552cdbaf538a7c0257d40b0a7f30e7a865e716e0aa0393addc10603bc3534'
+            'b3665c03ec1b150b00f777c2cd3051171cf9bceb8861f461d827af15d0f40fb4fbc6c9baf13e89d77acbeb87449e3e74a8013ce0959a765b74c2cec786926b96'
             '9964b4925788090add3c92ab52e4888401485c633413ae70681c538ed11d5a027299d42a0f66f8c02a6f0400f1fa60aa40efa4ec94df4610304e4fa093056b5f')
