--- a/stable/linux-aufs-git/config
+++ b/stable/linux-aufs-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.18.6-arch1 Kernel Configuration
+# Linux/x86 5.18.8-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 12.1.0"
 CONFIG_CC_IS_GCC=y
@@ -10050,14 +10050,16 @@ CONFIG_EROFS_FS_SECURITY=y
 CONFIG_EROFS_FS_ZIP=y
 CONFIG_EROFS_FS_ZIP_LZMA=y
 CONFIG_VBOXSF_FS=m
-CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_AUFS_FS=m
 CONFIG_AUFS_BRANCH_MAX_127=y
 # CONFIG_AUFS_BRANCH_MAX_511 is not set
 # CONFIG_AUFS_BRANCH_MAX_1023 is not set
 # CONFIG_AUFS_BRANCH_MAX_32767 is not set
+CONFIG_AUFS_SBILIST=y
 CONFIG_AUFS_HNOTIFY=y
+CONFIG_AUFS_HFSNOTIFY=y
 CONFIG_AUFS_EXPORT=y
+CONFIG_AUFS_INO_T_64=y
 # CONFIG_AUFS_XATTR is not set
 # CONFIG_AUFS_FHSM is not set
 CONFIG_AUFS_RDU=y
@@ -10065,7 +10067,11 @@ CONFIG_AUFS_RDU=y
 CONFIG_AUFS_SHWH=y
 CONFIG_AUFS_BR_RAMFS=y
 CONFIG_AUFS_BR_FUSE=y
+CONFIG_AUFS_POLL=y
 CONFIG_AUFS_BR_HFSPLUS=y
+CONFIG_AUFS_BDEV_LOOP=y
+# CONFIG_AUFS_DEBUG is not set
+CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=m
 CONFIG_NFS_V2=m
 CONFIG_NFS_V3=m
