--- a/stable/linux-uksmd-git/PKGBUILD
+++ b/stable/linux-uksmd-git/PKGBUILD
@@ -49,11 +49,11 @@ pkgbase=linux-uksmd-git
 # pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers')
 _major=5.18
 _srcname=linux
-pkgver=5.18.6.r0.g5f112b51a0a0
-pkgrel=2
+pkgver=5.18.10.r0.gbc560cecaa8b
+pkgrel=1
 pkgdesc='Linux UKSMD'
 arch=('x86_64')
-url="https://gitlab.com/post-factum/uksmd"
+url="https://codeberg.org/pf-kernel/uksmd"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'git')
